Break long words in pinned messages to prevent overflow (#7251)

--- a/res/css/views/right_panel/_PinnedMessagesCard.scss
+++ b/res/css/views/right_panel/_PinnedMessagesCard.scss
@@ -87,4 +87,8 @@ limitations under the License.
             }
         }
     }
+
+    .mx_EventTile_body {
+        word-break: break-word;
+    }
 }
